02 Code/FInalV2/build/log/idf_py_stdout_output_39660
Command: ninja all
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[2/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D "C:\Github\ELEC5550\02 Code\FInalV2\build\bootloader\esp-idf\esptool_py" && C:\Users\jojo1\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/jojo1/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 "C:/Github/ELEC5550/02 Code/FInalV2/build/bootloader/bootloader.bin""
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[3/10] No install step for 'bootloader'
[4/10] Completed 'bootloader'
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/usb_host.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/usb_host.c.obj 
ccache C:\Users\jojo1\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/Github/ELEC5550/02 Code/FInalV2/build/config" -I"C:/Github/ELEC5550/02 Code/FInalV2/main" -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/soc/esp32s3/register -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/hal/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3 -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/xtensa/esp32s3/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/xtensa/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/include/apps -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_uart/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/vfs/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -I"C:/Github/ELEC5550/02 Code/FInalV2/managed_components/espressif__esp_tinyusb/include" -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/fatfs/diskio -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/fatfs/src -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/fatfs/vfs -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/wear_levelling/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_partition/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/sdmmc/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/esp_pm/include -I"C:/Github/ELEC5550/02 Code/FInalV2/managed_components/espressif__tinyusb/src" -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos -IC:/Users/jojo1/esp/v5.5.1/esp-idf/components/usb/include -I"C:/Github/ELEC5550/02 Code/FInalV2/managed_components/espressif__usb_host_hid/include" -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=C:/Github/ELEC5550/02 Code/FInalV2=." -fmacro-prefix-map=C:/Users/jojo1/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DCFG_TUSB_MCU=OPT_MCU_ESP32S3 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/usb_host.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\usb_host.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/usb_host.c.obj -c "C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c"
In file included from C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:10:
C:/Github/ELEC5550/02 Code/FInalV2/main/globals.h:3:26: warning: 'uart_num' initialized and declared 'extern'
    3 | extern const uart_port_t uart_num = UART_NUM_0; //Built in UART on GPIO 43 and 44
      |                          ^~~~~~~~
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:15:1: error: unknown type name 'app_event_queue_t'
   15 | app_event_queue_t evt_queue;
      | ^~~~~~~~~~~~~~~~~
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c: In function 'hid_host_report_callback':
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:84:5: error: implicit declaration of function 'memcpy' [-Wimplicit-function-declaration]
   84 |     memcpy(&buf[1], data, length); //Copy data to the end of buf
      |     ^~~~~~
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:11:1: note: 'memcpy' is defined in header '<string.h>'; this is probably fixable by adding '#include <string.h>'
   10 | #include "globals.h"
  +++ |+#include <string.h>
   11 | 
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c: In function 'hid_host_monitor_queue':
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:152:25: error: request for member 'event_group' in something not a structure or union
  152 |             if(evt_queue.event_group == APP_EVENT_HID_HOST){
      |                         ^
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:153:48: error: request for member 'hid_host_device' in something not a structure or union
  153 |                 hid_host_device_event(evt_queue.hid_host_device.handle,
      |                                                ^
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:154:48: error: request for member 'hid_host_device' in something not a structure or union
  154 |                                       evt_queue.hid_host_device.event,
      |                                                ^
C:/Github/ELEC5550/02 Code/FInalV2/main/usb_host.c:155:48: error: request for member 'hid_host_device' in something not a structure or union
  155 |                                       evt_queue.hid_host_device.arg);
      |                                                ^
ninja: build stopped: subcommand failed.
